--- a/standings.html
+++ b/standings.html
@@ -97,9 +97,9 @@
                                 <td class="stats">47:33</td>
                                 <td class="stats">14</td>
                                 <td class="stats"><strong>24</strong></td>
-                                <td class="forma"><img src="img/win.png" height="18"></td>
                                 <td class="forma"><img src="img/lose.png" height="18"></td>
-                                <td class="forma"><img src="img/win.png" height="18"></td>             
+                                <td class="forma"><img src="img/win.png" height="18"></td>
+                                <td class="forma"><img src="img/lose.png" height="18"></td>             
                             </tr>
                              <tr>
                                 <td class="postupuje">4.</td>
