--- a/index.html
+++ b/index.html
@@ -37,13 +37,11 @@
 
 <div class="uvod">
     <div style="display: flex;">
-        <img class="mobile-responsive-img" src="img/hokej-BJ-P-ahoj-2.jpg" width="1200" height="650">
+        <img class="mobile-responsive-img" src="img/img_0986-676x451.jpg" width="1200" height="650">
     </div>    
     <article class="clanok-uvod">
         <div style=" display: block; padding-left: 50px;">
-            <h1 style="text-transform: uppercase; color: black; padding-top: 100px;"><img src="img/logo/bardejov.png" height="100"></h1>
-            <h3 style="text-transform: uppercase; color: black;"> Očakávania sa naplnili a Bardejov získava <strong>pohár</strong>  <span style="color: #4285f4"> <strong>Dušana Pašeka</strong></span> </h3>
-            <h3 style="text-transform: uppercase; color: black; font-size: 28px;">GRATULUJEME!!</h3>
+            <h3 style="text-transform: uppercase; color: black; padding-top: 150px"><strong>20.9.2020 sa nám začína play-off Tipsport ligy a my sa už tešíme na prvé duely</strong></h3>
             <h3 style="padding-top: 130px;"><strong>Prečítaj si poriadne novinky ohľadom play-off a prihlasovačky do ďalšieho ročníka, ktoré sú uvedené nižšie ⬇️</strong></h3>
             
         </div>    
@@ -54,10 +52,10 @@
 <div class="rozdelenie-clankov"> 
   
   <div class="clanky-mobil" style="">
-    <div  align="center"><img class="mobile-responsive-img" src="img/hokej, BJ-Sanok 10-18 ahoj (9).JPG.jpg" height="300" width="500"></div>
+    <div  align="center"><img class="mobile-responsive-img" src="img/tasr-puk-tipsport-liga.jpg" height="300" width="500"></div>
     <span class="news">News</span>
-       <p class="article-title">Predčasné oslavy? Bardejov vyhral základnú časť📢</p>
-       <h4> Nováčik Bardejov si zobral na seba príliš veľké sústo ale dokázal ho ustáť a konečne sa môže zaslúžene tešiť z 1.miesta v základnej časti. Bardejov šiel 11.kôl bez prehry, v ktorých si vybojoval pohar Dušana Pašeka a tak sa stáva jeho prvým držiteľom. Hoc aj ostávajú 2 kola do konca základnej časti Bardejov má 1.priečku už istú. Aké sú však reálne šance pre Bardejov v play-off? Rozhodne vysoké, pretože Bradejov hraje veľmi dobrý a kvalitný hokej, na ktorý nenašiel recept ani Poprad, ktorý im je v momentálnom ročníku asi najväčším konkurentom. Klub, ktorý sa umiestni na 8.mieste v zákaldnej časti to rozhodne nebude mať ľahké. Bardejov ma veľmi silnú obranu, ktorá dostala zatiaľ len 19 gólov! čo je najmenej v tejto sezóne. Ich útok patrí taktiež medzi najlepších. Viac gólov sa podarilo streliť už len práve spomínanému Popradu. Bardejov nemá veľkú slabinu, ktorej by sa mohol súper chytiť a tým sa to celé sťažilo každému celku, ktorý nastúpil proti nim. Z pohľadu organizátora má Bardejov nabehnuté až do finále play-off. Podarí sa niekomu ich zastaviť?</h4>
+       <p class="article-title">Podarí sa Spišskej obhájiť trofej?📢</p>
+       <h4> Play-off dvojice už máme jasné a pozrieť si ich môžete v našom <a href="playoff.html">pavúkovi</a>. Minuloročný majster sa popasuje o semifinále s nováčikom z Nitry. Je to rozhodne najvyrovnanejšia séria, ktorá nás v švrťfinále čaká a stojí za to si ju pozrieť. Fanúšikovia sa už isto nemôžu dočkať. Od Spiškej ako bývalého majstra sa očakáva viac ako od nováčika z Nitry. Uvidíme ako sa s tým tlakom vysporiada majster z prvej sezóny. Prvé štvrťfinálové zápasy nám začínaju dnes v nedeľu (20.9.2020) a budú trvať do nasledujúcej nedele (27.9.2020). Tešíme sa na plné štadióny fanúšikov s poriadnou atmosférou🔥 a na hráčov v plnej forme s chuťou sa pobiť o majstra Slovenskej republiky!! Snáď skončí pohár Vladimíra Dzurillu v tých správnych rukách</h4>
 
    </div> 
 
