--- a/playoff.html
+++ b/playoff.html
@@ -81,11 +81,11 @@
             <div class="round-details">Štvrťfinále<br/><span class="date">20.9 | 23.9 | 26.9 | 27.9</span></div>  <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN --> 
             <ul class="matchup">
                 <li class="team team-top" style="background-color:#c52431;"><img src="img/logo/bardejov.png" height="18"> <b style="color: white">Bardejov</b> 
-                    <span class="stav-serie" style="padding-left: 70px;"></span>
-                    <span class="score"></span></li>
+                    <span class="stav-serie" style="padding-left: 70px;">4</span>
+                    <span class="score">1</span></li>
                 <li class="team team-bottom" style="background-color:#0052B2;"><img src="img/logo/hc_kosice.png" height="18"> <b style="color: white">Košice</b>
-                    <span class="stav-serie" style="padding-left:"></span>
-                    <span class="score"></span></li>
+                    <span class="stav-serie" style="padding-left: 80px;">2</span>
+                    <span class="score">0</span></li>
             </ul>
             <ul class="matchup">
                 <li class="team team-top" style="background-color: #00aeef;"><img src="img/logo/hk_nitra.png" height="18"> <b style="color: white">Nitra</b><span class="score"></span></li>
