--- a/playoff.html
+++ b/playoff.html
@@ -93,11 +93,11 @@
             </ul>
             <ul class="matchup">
                 <li class="team team-top" style="background-color:#01245E;"><img src="img/logo/hk_poprad.png" height="18"> <b style="color: white">Poprad</b> 
-                    <span class="stav-serie" style="padding-left: 70px;"></span>
-                    <span class="score"></span></li>
+                    <span class="stav-serie" style="padding-left: 70px;">5</span>
+                    <span class="score">1</span></li>
                 <li class="team team-bottom" style="background-color:#00985B;"><img src="img/logo/Skalica.png" height="18"> <b style="color: white">Skalica</b>
-                    <span class="stav-serie" style="padding-left:"></span>
-                    <span class="score"></span></li>
+                    <span class="stav-serie" style="padding-left:71.5px">4</span>
+                    <span class="score">0</span></li>
             </ul>
             <ul class="matchup">
                 <li class="team team-top" style="background-color: #A90000;"><img src="img/logo/hc_05_banská_bystrica.png" height="18"> <b style="color: white">Banská Bystrica</b><span class="score"></span></li>
