--- a/playoff.html
+++ b/playoff.html
@@ -81,29 +81,35 @@
             <div class="round-details">Štvrťfinále<br/><span class="date">20.9 | 23.9 | 26.9 | 27.9</span></div>  <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN --> 
             <ul class="matchup">
                 <li class="team team-top" style="background-color:#c52431;"><img src="img/logo/bardejov.png" height="18"> <b style="color: white">Bardejov</b> 
-                    <span class="stav-serie" style="padding-left: 70px;">4</span>
-                    <span class="score">1</span></li>
+                    <span class="stav-serie" style="padding-left: 70px;">4&nbsp;&nbsp;&nbsp;3</span>
+                    <span class="score">2</span></li>
                 <li class="team team-bottom" style="background-color:#0052B2;"><img src="img/logo/hc_kosice.png" height="18"> <b style="color: white">Košice</b>
-                    <span class="stav-serie" style="padding-left: 80px;">2</span>
+                    <span class="stav-serie" style="padding-left: 80px;"> 2&nbsp;&nbsp;&nbsp;1</span>
                     <span class="score">0</span></li>
             </ul>
             <ul class="matchup">
-                <li class="team team-top" style="background-color: #00aeef;"><img src="img/logo/hk_nitra.png" height="18"> <b style="color: white">Nitra</b><span class="score"></span></li>
-                <li class="team team-bottom" style="background-color: #0F2648;"><img src="img/logo/hk_spisská_nová_ves.png" height="18"> <b style="color: white">Spišská Nová Ves</b> <span class="score"></span></li>
+                <li class="team team-top" style="background-color: #00aeef;"><img src="img/logo/hk_nitra.png" height="18"> <b style="color: white">Nitra</b>
+                    <span class="stav-serie" style="padding-left: 89px;"> 3&nbsp;&nbsp;&nbsp;</span>
+                    <span class="score">1</span></li>
+                <li class="team team-bottom" style="background-color: #0F2648;"><img src="img/logo/hk_spisská_nová_ves.png" height="18"> <b style="color: white">Spišská Nová Ves</b> 
+                    <span class="stav-serie" style="padding-left: 21px;"> 2&nbsp;&nbsp;&nbsp;</span>
+                    <span class="score">0</span></li>
             </ul>
             <ul class="matchup">
                 <li class="team team-top" style="background-color:#01245E;"><img src="img/logo/hk_poprad.png" height="18"> <b style="color: white">Poprad</b> 
-                    <span class="stav-serie" style="padding-left: 70px;">5</span>
+                    <span class="stav-serie" style="padding-left: 77px;">5&nbsp;&nbsp;&nbsp;</span>
                     <span class="score">1</span></li>
                 <li class="team team-bottom" style="background-color:#00985B;"><img src="img/logo/Skalica.png" height="18"> <b style="color: white">Skalica</b>
-                    <span class="stav-serie" style="padding-left:71.5px">4</span>
+                    <span class="stav-serie" style="padding-left:78px">4&nbsp;&nbsp;&nbsp;</span>
                     <span class="score">0</span></li>
             </ul>
             <ul class="matchup">
-                <li class="team team-top" style="background-color: #A90000;"><img src="img/logo/hc_05_banská_bystrica.png" height="18"> <b style="color: white">Banská Bystrica</b><span class="score"></span></li>
+                <li class="team team-top" style="background-color: #A90000;"><img src="img/logo/hc_05_banská_bystrica.png" height="18"> <b style="color: white">Banská Bystrica</b>
+                    <span class="stav-serie" style="padding-left: 30px;">4&nbsp;&nbsp;&nbsp;</span>
+                    <span class="score">0</span></li>
                 <li class="team team-bottom" style="background-color:#F58220;"><img src="img/logo/hk_dukla_michalovce.png" height="18"> <b style="color: white">Michalovce</b>
-                    <span class="stav-serie" style="padding-left:"></span>
-                    <span class="score"></span></li>
+                    <span class="stav-serie" style="padding-left:57px;">6&nbsp;&nbsp;&nbsp;</span>
+                    <span class="score">1</span></li>
             </ul>           
                                                
         </div>  <!-- END ROUND QUATER -->
@@ -111,7 +117,7 @@
         <div class="round round-two "> <!-- DOPISAT "CURRENT" ZA ROUND-TWO --> 
             <div class="round-details">Semifinále<br/><span class="date"></span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->         
             <ul class="matchup">
-                <li class="team team-top"><span class="score"></span></li>
+                <li class="team team-top" style="background-color:#c52431;"><img src="img/logo/bardejov.png" height="18"> <b style="color: white">Bardejov</b> <span class="score"></span></li>
                 <li class="team team-bottom"><span class="score"></span></li>
             </ul>   
             <ul class="matchup">
