--- a/halloffame.html
+++ b/halloffame.html
@@ -42,6 +42,7 @@
             <th style="text-align: center; padding-left: 20px;">Majster <img src="img/med_01.png" height="18"></th>
             <th style="text-align: center; padding-left: 20px;">Vicemajster <img src="img/med_02.png" height="18"></th>
             <th style="text-align: center; padding-left: 20px;">Tretí <img src="img/med_03.png" height="18"></th>
+            <th style="text-align: center; padding-left: 20px;">Najprodtukívnejší hráč</th>
             <th style="text-align: center; padding-left: 20px;">Najlepší strelec (Góly)</th>
             <th style="text-align: center; padding-left: 20px;">Zlatá korčuľa (Body)</th>
         </thead>
@@ -51,7 +52,8 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
+                <td><img src="img/logo/bardejov.png" height="18"> Filip Kaštyl - 27</td>
+                <td><img src="img/logo/bardejov.png" height="18"> Einari Vuollu - 19</td>
                 <td></td>
             </tr>
             <tr>
@@ -59,6 +61,7 @@
                 <td><img src="img/logo/hk_spisská_nová_ves.png" height="18"> HK Spišská Nová Ves</td>
                 <td><img src="img/logo/trencin.png" height="18"> HK Dukla Trenčín</td>
                 <td><img src="img/logo/hc_kosice.png" height="18"> HC Košice</td>
+                <td></td>
                 <td><img src="img/logo/trencin.png" height="18"> Lari Suorsa - 15</td>
                 <td><img src="img/logo/trencin.png" height="18"> Herman Lohmus - 10</td>
             </tr>
