--- a/halloffame.html
+++ b/halloffame.html
@@ -42,9 +42,9 @@
             <th style="text-align: center; padding-left: 20px;">Majster <img src="img/med_01.png" height="18"></th>
             <th style="text-align: center; padding-left: 20px;">Vicemajster <img src="img/med_02.png" height="18"></th>
             <th style="text-align: center; padding-left: 20px;">Tretí <img src="img/med_03.png" height="18"></th>
-            <th style="text-align: center; padding-left: 20px;">Najprodtukívnejší hráč</th>
-            <th style="text-align: center; padding-left: 20px;">Najlepší strelec (Góly)</th>
-            <th style="text-align: center; padding-left: 20px;">Zlatá korčuľa (Body)</th>
+            <th style="text-align: center; padding-left: 20px;">Najprodtukívnejší hráč (ZČ)</th>
+            <th style="text-align: center; padding-left: 20px;">Najlepší strelec ( ZČ)</th>
+            <th style="text-align: center; padding-left: 20px;">Zlatá korčuľa (PO)</th>
         </thead>
         <tbody>
             <tr>
