--- a/playoff.html
+++ b/playoff.html
@@ -115,7 +115,7 @@
         </div>  <!-- END ROUND QUATER -->
 
         <div class="round round-two "> <!-- DOPISAT "CURRENT" ZA ROUND-TWO --> 
-            <div class="round-details">Semifinále<br/><span class="date"></span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->         
+            <div class="round-details">Semifinále<br/><span class="date">30.9 | 3.10 | 4.10 | 7.10</span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->         
             <ul class="matchup">
                 <li class="team team-top" style="background-color:#c52431;"><img src="img/logo/bardejov.png" height="18"> <b style="color: white">Bardejov</b> <span class="score"></span></li>
                 <li class="team team-bottom"><span class="score"></span></li>
