--- a/playoff.html
+++ b/playoff.html
@@ -97,18 +97,18 @@
             </ul>
             <ul class="matchup">
                 <li class="team team-top" style="background-color:#01245E;"><img src="img/logo/hk_poprad.png" height="18"> <b style="color: white">Poprad</b> 
-                    <span class="stav-serie" style="padding-left: 77px;">5&nbsp;&nbsp;&nbsp;</span>
+                    <span class="stav-serie" style="padding-left: 77px;">5&nbsp;&nbsp;&nbsp;0</span>
                     <span class="score">1</span></li>
                 <li class="team team-bottom" style="background-color:#00985B;"><img src="img/logo/Skalica.png" height="18"> <b style="color: white">Skalica</b>
-                    <span class="stav-serie" style="padding-left:78px">4&nbsp;&nbsp;&nbsp;</span>
-                    <span class="score">0</span></li>
+                    <span class="stav-serie" style="padding-left:78px">4&nbsp;&nbsp;&nbsp;4</span>
+                    <span class="score">1</span></li>
             </ul>
             <ul class="matchup">
                 <li class="team team-top" style="background-color: #A90000;"><img src="img/logo/hc_05_banská_bystrica.png" height="18"> <b style="color: white">Banská Bystrica</b>
-                    <span class="stav-serie" style="padding-left: 30px;">4&nbsp;&nbsp;&nbsp;</span>
-                    <span class="score">0</span></li>
+                    <span class="stav-serie" style="padding-left: 30px;">4&nbsp;&nbsp;&nbsp;6</span>
+                    <span class="score">1</span></li>
                 <li class="team team-bottom" style="background-color:#F58220;"><img src="img/logo/hk_dukla_michalovce.png" height="18"> <b style="color: white">Michalovce</b>
-                    <span class="stav-serie" style="padding-left:57px;">6&nbsp;&nbsp;&nbsp;</span>
+                    <span class="stav-serie" style="padding-left:57px;">6&nbsp;&nbsp;&nbsp;1</span>
                     <span class="score">1</span></li>
             </ul>           
                                                
