--- a/playoff.html
+++ b/playoff.html
@@ -89,10 +89,10 @@
             </ul>
             <ul class="matchup">
                 <li class="team team-top" style="background-color: #00aeef;"><img src="img/logo/hk_nitra.png" height="18"> <b style="color: white">Nitra</b>
-                    <span class="stav-serie" style="padding-left: 89px;"> 3&nbsp;&nbsp;&nbsp;</span>
-                    <span class="score">1</span></li>
+                    <span class="stav-serie" style="padding-left: 89px;"> 3&nbsp;&nbsp;&nbsp;3</span>
+                    <span class="score">2</span></li>
                 <li class="team team-bottom" style="background-color: #0F2648;"><img src="img/logo/hk_spisská_nová_ves.png" height="18"> <b style="color: white">Spišská Nová Ves</b> 
-                    <span class="stav-serie" style="padding-left: 21px;"> 2&nbsp;&nbsp;&nbsp;</span>
+                    <span class="stav-serie" style="padding-left: 21px;"> 2&nbsp;&nbsp;&nbsp;2</span>
                     <span class="score">0</span></li>
             </ul>
             <ul class="matchup">
@@ -118,7 +118,7 @@
             <div class="round-details">Semifinále<br/><span class="date">30.9 | 3.10 | 4.10 | 7.10</span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->         
             <ul class="matchup">
                 <li class="team team-top" style="background-color:#c52431;"><img src="img/logo/bardejov.png" height="18"> <b style="color: white">Bardejov</b> <span class="score"></span></li>
-                <li class="team team-bottom"><span class="score"></span></li>
+                <li class="team team-bottom" style="background-color: #00aeef;"><img src="img/logo/hk_nitra.png" height="18"> <b style="color: white">Nitra</b><span class="score"></span></li>
             </ul>   
             <ul class="matchup">
                 <li class="team team-top"><span class="score"></span></li>
