--- a/playoff.html
+++ b/playoff.html
@@ -77,7 +77,7 @@
     <!-- MAJSTROVI => style="background-color: rgb(218,165,32, 0.8);"-->
      <img class="pohar-tp-playoff" src="img/pohar_dzurilla.png" height="250" style="opacity: 0.7; margin-top: 40px;">
     <div class="split split-one">
-        <div class="round round-one current">
+        <div class="round round-one ">
             <div class="round-details">Štvrťfinále<br/><span class="date">20.9 | 23.9 | 26.9 | 27.9</span></div>  <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN --> 
             <ul class="matchup">
                 <li class="team team-top" style="background-color:#c52431;"><img src="img/logo/bardejov.png" height="18"> <b style="color: white">Bardejov</b> 
@@ -97,32 +97,32 @@
             </ul>
             <ul class="matchup">
                 <li class="team team-top" style="background-color:#01245E;"><img src="img/logo/hk_poprad.png" height="18"> <b style="color: white">Poprad</b> 
-                    <span class="stav-serie" style="padding-left: 77px;">5&nbsp;&nbsp;&nbsp;0</span>
+                    <span class="stav-serie" style="padding-left: 77px;">5&nbsp;&nbsp;&nbsp;0&nbsp;&nbsp;&nbsp;2</span>
                     <span class="score">1</span></li>
                 <li class="team team-bottom" style="background-color:#00985B;"><img src="img/logo/Skalica.png" height="18"> <b style="color: white">Skalica</b>
-                    <span class="stav-serie" style="padding-left:78px">4&nbsp;&nbsp;&nbsp;4</span>
-                    <span class="score">1</span></li>
+                    <span class="stav-serie" style="padding-left:78px">4&nbsp;&nbsp;&nbsp;4&nbsp;&nbsp;&nbsp;6</span>
+                    <span class="score">2</span></li>
             </ul>
             <ul class="matchup">
                 <li class="team team-top" style="background-color: #A90000;"><img src="img/logo/hc_05_banská_bystrica.png" height="18"> <b style="color: white">Banská Bystrica</b>
-                    <span class="stav-serie" style="padding-left: 30px;">4&nbsp;&nbsp;&nbsp;6</span>
-                    <span class="score">1</span></li>
+                    <span class="stav-serie" style="padding-left: 30px;">4&nbsp;&nbsp;&nbsp;6&nbsp;&nbsp;&nbsp;6</span>
+                    <span class="score">2</span></li>
                 <li class="team team-bottom" style="background-color:#F58220;"><img src="img/logo/hk_dukla_michalovce.png" height="18"> <b style="color: white">Michalovce</b>
-                    <span class="stav-serie" style="padding-left:57px;">6&nbsp;&nbsp;&nbsp;1</span>
+                    <span class="stav-serie" style="padding-left:57px;">6&nbsp;&nbsp;&nbsp;1&nbsp;&nbsp;&nbsp;1</span>
                     <span class="score">1</span></li>
             </ul>           
                                                
         </div>  <!-- END ROUND QUATER -->
 
-        <div class="round round-two "> <!-- DOPISAT "CURRENT" ZA ROUND-TWO --> 
+        <div class="round round-two current"> <!-- DOPISAT "CURRENT" ZA ROUND-TWO --> 
             <div class="round-details">Semifinále<br/><span class="date">30.9 | 3.10 | 4.10 | 7.10</span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->         
             <ul class="matchup">
                 <li class="team team-top" style="background-color:#c52431;"><img src="img/logo/bardejov.png" height="18"> <b style="color: white">Bardejov</b> <span class="score"></span></li>
                 <li class="team team-bottom" style="background-color: #00aeef;"><img src="img/logo/hk_nitra.png" height="18"> <b style="color: white">Nitra</b><span class="score"></span></li>
             </ul>   
             <ul class="matchup">
-                <li class="team team-top"><span class="score"></span></li>
-                <li class="team team-bottom"><span class="score"></span></li>
+                <li class="team team-top" style="background-color:#00985B;"><img src="img/logo/Skalica.png" height="18"> <b style="color: white">Skalica</b><span class="score"></span></li>
+                <li class="team team-bottom"style="background-color: #A90000;"><img src="img/logo/hc_05_banská_bystrica.png" height="18"> <b style="color: white">Banská Bystrica</b><span class="score"></span></li>
             </ul>   
                                                   
         </div>  <!-- END ROUND SEMI -->
