--- a/playoff.html
+++ b/playoff.html
@@ -105,10 +105,10 @@
             </ul>
             <ul class="matchup">
                 <li class="team team-top" style="background-color: #A90000;"><img src="img/logo/hc_05_banská_bystrica.png" height="18"> <b style="color: white">Banská Bystrica</b>
-                    <span class="stav-serie" style="padding-left: 30px;">4&nbsp;&nbsp;&nbsp;6&nbsp;&nbsp;&nbsp;</span>
-                    <span class="score">1</span></li>
+                    <span class="stav-serie" style="padding-left: 30px;">4&nbsp;&nbsp;&nbsp;6&nbsp;&nbsp;&nbsp;3</span>
+                    <span class="score">2</span></li>
                 <li class="team team-bottom" style="background-color:#F58220;"><img src="img/logo/hk_dukla_michalovce.png" height="18"> <b style="color: white">Michalovce</b>
-                    <span class="stav-serie" style="padding-left:57px;">6&nbsp;&nbsp;&nbsp;1&nbsp;&nbsp;&nbsp;</span>
+                    <span class="stav-serie" style="padding-left:57px;">6&nbsp;&nbsp;&nbsp;1&nbsp;&nbsp;&nbsp;0</span>
                     <span class="score">1</span></li>
             </ul>           
                                                
