--- a/playoff.html
+++ b/playoff.html
@@ -117,12 +117,20 @@
         <div class="round round-two current"> <!-- DOPISAT "CURRENT" ZA ROUND-TWO --> 
             <div class="round-details">Semifinále<br/><span class="date">30.9 | 3.10 | 4.10 | 7.10</span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->         
             <ul class="matchup">
-                <li class="team team-top" style="background-color:#c52431;"><img src="img/logo/bardejov.png" height="18"> <b style="color: white">Bardejov</b> <span class="score"></span></li>
-                <li class="team team-bottom" style="background-color: #00aeef;"><img src="img/logo/hk_nitra.png" height="18"> <b style="color: white">Nitra</b><span class="score"></span></li>
+                <li class="team team-top" style="background-color:#c52431;"><img src="img/logo/bardejov.png" height="18"> <b style="color: white">Bardejov</b>
+                <span class="stav-serie" style="padding-left: 70px;">3&nbsp;&nbsp;&nbsp;</span>
+                <span class="score">0</span></li>
+                <li class="team team-bottom" style="background-color: #00aeef;"><img src="img/logo/hk_nitra.png" height="18"> <b style="color: white">Nitra</b>
+                    <span class="stav-serie" style="padding-left: 89px;"> 4&nbsp;&nbsp;&nbsp;</span>
+                    <span class="score">1</span></li>
             </ul>   
             <ul class="matchup">
-                <li class="team team-top" style="background-color:#00985B;"><img src="img/logo/Skalica.png" height="18"> <b style="color: white">Skalica</b><span class="score"></span></li>
-                <li class="team team-bottom"style="background-color: #A90000;"><img src="img/logo/hc_05_banská_bystrica.png" height="18"> <b style="color: white">Banská Bystrica</b><span class="score"></span></li>
+                <li class="team team-top" style="background-color:#00985B;"><img src="img/logo/Skalica.png" height="18"> <b style="color: white">Skalica</b>
+                    <span class="stav-serie" style="padding-left:78px">6&nbsp;&nbsp;&nbsp;</span>
+                    <span class="score">1</span></li>
+                <li class="team team-bottom"style="background-color: #A90000;"><img src="img/logo/hc_05_banská_bystrica.png" height="18"> <b style="color: white">Banská Bystrica</b>
+                    <span class="stav-serie" style="padding-left: 30px;">4&nbsp;&nbsp;&nbsp;</span>
+                    <span class="score">0</span></li>
             </ul>   
                                                   
         </div>  <!-- END ROUND SEMI -->
