--- a/standings.html
+++ b/standings.html
@@ -75,6 +75,7 @@
                 <th onclick="sortColumn('lose')">P</th>
                 <th onclick="sortColumn('score')">Skóre</th>
                 <th onclick="sortColumn('diffscore')">+/-</th>
+                <th onclick="sortColumn('diffscore')">Body</th>
             </tr>
           <tbody id="tableData"></tbody>
        </table>
