--- a/playoff.html
+++ b/playoff.html
@@ -142,7 +142,7 @@
 <div class="champion current">
          <div class="final" > <!-- DOPISAT "CURRENT" ZA ROUND-TWO --> 
             <i class="fa fa-trophy"></i>
-            <div class="round-details">Finále <br/><span class="date"></span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->     
+            <div class="round-details">Finále <br/><span class="date">7.10 | 9.10 | 10.10 | </span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->     
             <ul class ="matchup championship">
                 <li class="team team-top" align="left" style="background-color: #00aeef;"><img src="img/logo/nitra.png" height="18"> <b style="color: white">Nitra</b>
                     <span class="score"></span>
