--- a/playoff.html
+++ b/playoff.html
@@ -147,7 +147,7 @@
                 <li class="team team-top" align="left" style="background-color: #00aeef;"><img src="img/logo/nitra.png" height="18"> <b style="color: white">Nitra</b>
                     <span class="score"></span>
                 </li>
-                <li class="team team-bottom" align="left" style="background-color:#00985B;"><img src="img/logo/Skalica.png" height="18"> <b style="color: white">Skalica</b>
+                <li class="team team-bottom" align="left" style="background-color:#00985B;"><img src="img/logo/skalica.png" height="18"> <b style="color: white">Skalica</b>
                     <span class="stav-serie" style="padding-left: 70px;"></span>
                     <span class="score"></span></li>
             </ul>
